# gadget2hdf5

./: gadget2hdf5.py  pyproject.toml
gadget2hdf5/: __init__.py  convert_to_hdf5.py
